[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/LANServerBroadcast/server_listener/ServerListener.gd" type="Script" id=1]
[ext_resource path="res://client/main_menu/server_browser/ServerBrowser.gd" type="Script" id=2]

[node name="ServerBrowser" type="Panel"]
margin_left = 487.0
margin_top = 262.0
margin_right = 1010.0
margin_bottom = 589.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
serverListPath = NodePath("ScrollContainer/ServerList")

[node name="ServerListener" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 1.08069
margin_top = -16.7512
margin_right = 97.0807
margin_bottom = -2.75116
text = "Server Browser"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerList" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 523.0
size_flags_horizontal = 3
size_flags_vertical = 9

[node name="ServerRepoRequest" type="HTTPRequest" parent="."]

[node name="RefreshButton" type="Button" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.1443
margin_top = -23.1491
margin_right = -5.14429
margin_bottom = -3.14911
text = "Refresh"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="new_server" from="ServerListener" to="." method="_on_ServerListener_new_server"]
[connection signal="remove_server" from="ServerListener" to="." method="_on_ServerListener_remove_server"]
[connection signal="request_completed" from="ServerRepoRequest" to="." method="_on_ServerRepoRequest_request_completed"]
[connection signal="pressed" from="RefreshButton" to="." method="_on_RefreshButton_pressed"]
